# PinePods

./: completed_todos.md  dockerfile
.github/workflows/: nightly-docker-publish.yml
clients/: clientapi.py
database_functions/: functions.py
startup/: setuppostgresdatabase.py
web/: Cargo.toml
web/src/: lib.rs  main.rs
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/tauri-plugin-mobileappmedia/: Cargo.toml  README.md  build.rs
web/src-tauri/tauri-plugin-mobileappmedia/android/: build.gradle.kts
web/src-tauri/tauri-plugin-mobileappmedia/android/src/androidTest/java/: ExampleInstrumentedTest.kt
web/src-tauri/tauri-plugin-mobileappmedia/android/src/main/java/: Example.kt  ExamplePlugin.kt  MediaSessionPlugin.kt
web/src-tauri/tauri-plugin-mobileappmedia/android/src/test/java/: ExampleUnitTest.kt
web/src-tauri/tauri-plugin-mobileappmedia/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/tauri-plugin-mobileappmedia/examples/vanilla/src-tauri/capabilities/: default.json
web/src-tauri/tauri-plugin-mobileappmedia/examples/vanilla/src-tauri/src/: lib.rs
web/src-tauri/tauri-plugin-mobileappmedia/permissions/: default.toml
web/src-tauri/tauri-plugin-mobileappmedia/permissions/autogenerated/: reference.md
web/src-tauri/tauri-plugin-mobileappmedia/permissions/autogenerated/commands/: register_media_session.toml  update_playback_state.toml
web/src-tauri/tauri-plugin-mobileappmedia/permissions/schemas/: schema.json
web/src-tauri/tauri-plugin-mobileappmedia/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
(+14 files in other folders)
