[package]
name = "tauri-plugin-mobileappmedia"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mobileappmedia"

[dependencies]
tauri = { version = "2.4.0" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0.127"

[build-dependencies]
tauri-plugin = { version = "2.1.0", features = ["build"] }
